package ro.minipay.issuer.model;

public enum CardStatus {
    ACTIVE,
    BLOCKED,
    EXPIRED
}
