@startuml MiniPay - Class Diagram Payments Domain
!theme blueprint
title MiniPay — Diagrama Claselor: Domeniul Payments

skinparam classBackgroundColor #EBF5FB
skinparam classBorderColor #2980B9
skinparam classHeaderBackgroundColor #2980B9
skinparam classHeaderFontColor #FFFFFF
skinparam arrowColor #1A252F
skinparam noteBackgroundColor #FEF9E7
skinparam noteBorderColor #F39C12

' ─── gateway-svc ───────────────────────────────────────────

class PaymentService {
  - store: Map<String, PaymentResponse>
  - vaultClient: VaultClient
  - fraudClient: FraudClient
  - networkClient: NetworkClient
  - eventPublisher: PaymentEventPublisher
  + authorize(request, clientIp): PaymentResponse
  + capture(txnId, request): PaymentResponse
  + refund(txnId, request): PaymentResponse
  + getPayment(txnId): PaymentResponse
}

class AuthorizeRequest <<record>> {
  + pan: String
  + expiryDate: String
  + amount: Long
  + currency: String
  + merchantId: String
  + orderId: String
}

class PaymentResponse <<record>> {
  + txnId: String
  + dpan: String
  + status: PaymentStatus
  + isoResponseCode: String
  + amount: Long
  + currency: String
  + merchantId: String
  + orderId: String
  + fraudScore: Double
  + fraudReasons: List<String>
  + authCode: String
  + declineReason: PaymentDeclineReason
  + timestamp: String
}

enum PaymentStatus {
  PENDING
  AUTHORIZED
  CAPTURED
  DECLINED
  BLOCKED
  CHALLENGE
  REFUNDED
  ERROR
}

enum PaymentDeclineReason {
  INSUFFICIENT_FUNDS
  INVALID_CARD
  EXPIRED_CARD
  DO_NOT_HONOR
  ACTIVITY_LIMIT_EXCEEDED
  FRAUD_BLOCKED
  ISSUER_UNAVAILABLE
  INTERNAL_ERROR
}

class PaymentAuditEvent <<record>> {
  + txnId: String
  + status: String
  + amount: Long
  + currency: String
  + merchantId: String
  + userId: String
  + fraudScore: Double
  + timestamp: String
}

' ─── vault-svc ─────────────────────────────────────────────

class VaultToken <<@Entity>> {
  + dpan: String <<PK>>
  + encPan: String
  + encExpiry: String
  + bin: String
  + createdAt: String
}

class AesGcmCipher {
  - key: byte[256]
  + encrypt(plaintext): String
  + decrypt(ciphertext): String
  - generateIV(): byte[96]
}

class DpanGenerator {
  + generate(pan): String
  - preserveBin(pan): String
  - randomDigits(n): String
  - luhnCheckDigit(partial): char
  + validate(pan): boolean
}

' ─── issuer-svc ────────────────────────────────────────────

class CardAccount <<@Entity>> {
  + pan: String <<PK>>
  + holderName: String
  + expiryDate: String
  + status: CardStatus
  + balanceInCents: Long
  + dailyLimitInCents: Long
  + dailySpentInCents: Long
  + lastSpentDate: LocalDate
}

enum CardStatus {
  ACTIVE
  BLOCKED
  EXPIRED
}

class IssuerService {
  + authorize(request): AuthorizeResponse
  - checkStatus(card): void
  - checkExpiry(card): void
  - checkBalance(card, amount): void
  - checkDailyLimit(card, amount): void
  - deductBalance(card, amount): void
  - resetDailyIfNeeded(card): void
}

class AuthorizeResponse <<record>> {
  + responseCode: String
  + authCode: String
  + isApproved: boolean
}

' ─── audit-svc ─────────────────────────────────────────────

class AuditEntry <<@Entity>> {
  + id: Long <<PK>>
  + sequenceNumber: Long
  + txnId: String
  + status: String
  + amount: Long
  + currency: String
  + merchantId: String
  + fraudScore: Double
  + eventTimestamp: String
  + prevHash: String
  + entryHash: String
}

class HashChainService {
  + append(event): AuditEntry
  + verify(): VerifyResult
  + computeHash(entry): String
  - getPrevHash(): String
}

class VerifyResult <<record>> {
  + isValid: boolean
  + chainLength: long
  + firstTamperedAt: Long
  + txnId: String
}

' ─── fraud-svc (Python) ────────────────────────────────────

class ScoreRequest <<Pydantic>> {
  + dpan: str
  + amount: int
  + currency: str
  + merchantId: str
  + ipAddress: str
}

class ScoreResponse <<Pydantic>> {
  + score: float
  + decision: str
  + reasons: List[str]
  + shap_details: List[ShapDetail]
}

class ShapDetail <<Pydantic>> {
  + feature: str
  + shap_value: float
  + description: str
}

class FraudModel {
  - model: XGBClassifier
  - explainer: TreeExplainer
  + predict(features): Tuple[float, List[ShapDetail]]
  + load_or_train(): void
}

' ─── Relatii ────────────────────────────────────────────────

PaymentService --> PaymentResponse : creates
PaymentService --> AuthorizeRequest : uses
PaymentResponse --> PaymentStatus
PaymentResponse --> PaymentDeclineReason
PaymentService --> PaymentAuditEvent : publishes

VaultToken --> AesGcmCipher : uses for encPan
VaultToken --> DpanGenerator : dpan generated by

IssuerService --> CardAccount : manages
IssuerService --> AuthorizeResponse : returns
CardAccount --> CardStatus

HashChainService --> AuditEntry : creates
HashChainService --> VerifyResult : returns
AuditEntry --> AuditEntry : prevHash links

FraudModel --> ScoreResponse : returns
ScoreResponse --> ShapDetail
ScoreRequest --> FraudModel : input

note bottom of HashChainService
  entryHash = SHA-256(
    sequenceNumber + txnId + status
    + amount + currency + merchantId
    + fraudScore + timestamp + prevHash
  )
  Orice modificare → hash mismatch detectat
end note

note bottom of AesGcmCipher
  AES-256-GCM (AEAD):
  - Cheie: 256-bit
  - IV: 96-bit random per-encryption
  - PAN niciodata stocat plaintext
end note

note bottom of FraudModel
  XGBoost + SHAP TreeExplainer
  Thresholds: ALLOW<0.5 | CHALLENGE<0.8 | BLOCK>=0.8
  GDPR Art.22: top-3 SHAP reasons furnizate
end note

@enduml
